--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-    <title>react</title>
+    <title>Movie Night</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
